primer bosquejo fondo y logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
 
   <div class="hero">
-<h1> Dan da Dan Page Here !!</h1>
+    <img class="tunel" src="./img/tunel.png" alt="">
+    <img class="ojos" src="./img/ojos.png" alt="">
+    <img class="logo" src="./img/dandadan_logo__english__by_shonendasher_diaeah8-pre.png" alt="">
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
